# CAREBench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
carebench/: common.py  judge.py  load_dataset.py  score.py
scripts/: generate_responses.py
